# dynamic-shadows-lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo.cpp
demo/: CMakeLists.txt  demo.cpp  utils.hpp
include/: evenShape2D.hpp  line2D.hpp  math.hpp  mathplotUtil.hpp  shape2D.hpp  square2D.hpp  triangle2D.hpp  vec2f.hpp
src/: evenShape2D.cpp  line2D.cpp  math.cpp  shape2D.cpp  square2D.cpp  triangle2D.cpp  vec2f.cpp
tests/: CMakeLists.txt  line2DTests.cpp  main.cpp  vec2fTests.cpp
tests/benchmark/: CMakeLists.txt  main.cpp
tests/unit_tests/: CMakeLists.txt  line2DTests.cpp  mathTests.cpp  square2DTests.cpp  vec2fTests.cpp
tests/visual_tests/: CMakeLists.txt  main.cpp  visualDocs.cpp  visualDocs.hpp  visualTests.cpp  visualTests.hpp  visualUtil.hpp  visual_tests.hpp
